--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -46,7 +46,7 @@
 
 /* Node-specific colors */
 .grid-cell.active-nonode-at-localhost {
-  background-color: rgb(34, 197, 94); /* green */
+  background-color: rgb(34, 197, 94);
 }
 
 .grid-cell.active-primary {
@@ -54,19 +54,11 @@
 }
 
 .grid-cell.active-secondary {
-  background-color: rgb(22, 163, 74); /* darker green */
+  background-color: rgb(22, 163, 74); /* green */
 }
 
-.grid-cell.active-tertiary {
+.grid-cell.active-node3 {
   background-color: rgb(59, 130, 246); /* blue */
-}
-
-.grid-cell.active-quaternary {
-  background-color: rgb(168, 85, 247); /* purple */
-}
-
-.grid-cell.active-node {
-  background-color: rgb(245, 158, 11); /* orange */
 }
 
 .grid-cell.calculating {
